CHANGELOG
============

----completed
COMPLETED 08/01/09: comments on concept
COMPLETED 08/01/09 mail: mail admin on each new concept request
COMPLETED 10 01 09 add status decision tree on concept creation
COMPLETED 10 01 09 removed password protection from login
COMPLETED 10 01 09 add versioning to concepts
COMPLETED 10 01 09 add technical POC to concept
COMPLETED 10 01 09 add prod dev POC to concept
COMPLETED 10 01 09 add date of approval meeting to concept, hosted_on_c4.com, subject_to_tx,using_video
COMPLETED 10 01 09 add budget name to concept
COMPLETED 10 01 09 add objectives to concept
COMPLETED 10 01 09 add background to concept
COMPLETED 10 01 09 add traffic estimates to concept
COMPLETED 10 01 09 add revenue estimates to concept
COMPLETED 10 01 09 add moderation requirement to concept
COMPLETED 10 01 09 paginate concepts
COMPLETED 10 01 09 changelog email set up

----deployment tasks
TODO intial dpeloyment recipe
TODO logging chores into a runner script
TODO add SMTP server details into mailer
TODO write backup scripts once tested



----views
TODO tidy up form styling
TODO convert destructive links to post requests
TODO resource cross charging form for concepts
TODO comments styled different by approval group users
TODO add poge for concept process diagram
TODO add POC, budget stuff, mod requirements, estimates for traffic and revenue to concept form
TODO create PDF of concept on creation
TODO add saving form data in chunks


----models
TODO add supplier model
TODO add suppliers to concept
TODO calculated total costs for concept
TODO add moderation requirement tickbox to form
TODO add attachments to concept
TODO add team roles to user


----mailings
TODO mail: reminders to all user group for new concept submissions
